<resources>
    <string name="app_name">Court Counter</string>
    <string name="Court">Court</string>
    <string name="Counter">Counter</string>
    <string name="text">0</string>
    <string name="point3">+3 Points</string>
    <string name="point2">+2 Points</string>
    <string name="point1">FREE THROW</string>
    <string name="teama">Team A</string>
    <string name="teamb">Team B</string>
    <string name="reset">RESET</string>
</resources>
