<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b"
    android:orientation="horizontal">





    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:context="com.example.android.courtcounter.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Court"
            android:fontFamily="cursive"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="65dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:textSize="40dp"
            android:textColor="#000000"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:text="@string/teama" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"/>

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:textColor="#ffffff"
            android:textSize="30dp"
            android:text="@string/text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:fontFamily="cursive"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:onClick="addThreeForTeamA"
            android:text="@string/point3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textSize="20dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:fontFamily="cursive"
            android:onClick="addTwoForTeamA"
            android:text="@string/point2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textSize="20dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:fontFamily="cursive"
            android:onClick="addOneForTeamA"
            android:text="@string/point1" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginBottom="90dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.courtcounter.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Counter"
            android:textColor="#ffffff"
            android:fontFamily="cursive"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="65dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:textSize="40dp"
            android:textColor="#000000"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:text="@string/teamb" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffffff"/>

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:textColor="#ffffff"
            android:textSize="30dp"

            android:text="@string/text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:fontFamily="cursive"
            android:background="#000000"
            android:textColor="#ffffff"
            android:onClick="addThreeForTeamB"
            android:textSize="20dp"
            android:text="@string/point3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:fontFamily="cursive"
            android:onClick="addTwoForTeamB"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:text="@string/point2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:fontFamily="cursive"
            android:onClick="addOneForTeamB"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:text="@string/point1" />
    </LinearLayout>
</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:fontFamily="cursive"
        android:textSize="20sp"
        android:onClick="reset"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>







